Add Front Page Header with Urdu + English Name and Description

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tajush Sharia Library</title>
 
+  <!-- Fonts for Urdu Nastaleeq -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
-      font-family: "Noto Nastaliq Urdu", "Jameel Noori Nastaleeq", serif;
+      font-family: "Noto Nastaliq Urdu", serif;
       background-color: #f9f9f9;
       text-align: center;
       direction: rtl;
@@ -17,22 +20,32 @@
     header {
       background: linear-gradient(to right, #004d40, #00695c);
       color: white;
-      padding: 25px 10px;
+      padding: 40px 10px;
       border-bottom: 4px solid #00796b;
     }
 
     .urdu-name {
-      font-size: 36px;
+      font-size: 42px;
       font-weight: bold;
       line-height: 1.5;
-      font-family: "Noto Nastaliq Urdu", "Jameel Noori Nastaleeq", serif;
+      margin-bottom: 10px;
     }
 
     .english-name {
-      font-size: 18px;
+      font-size: 20px;
       color: #c8e6c9;
       font-family: "Poppins", sans-serif;
       letter-spacing: 1px;
+    }
+
+    .description {
+      font-size: 16px;
+      color: #e0f2f1;
+      margin-top: 15px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.5;
     }
   </style>
 </head>
@@ -42,6 +55,9 @@
   <header>
     <div class="urdu-name">تاج الشریعہ لائبریری</div>
     <div class="english-name">Tajush Sharia Library</div>
+    <div class="description">
+      یہ مفت آن لائن لائبریری ہے جہاں دینی، اردو اور عربی کتابیں آسانی سے پڑھی اور ڈاؤنلوڈ کی جا سکتی ہیں۔
+    </div>
   </header>
 
 </body>
