Update Front Page Header to match Jamiatul Uloom Islami style

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tajush Sharia Library</title>
 
-  <!-- Fonts for Urdu Nastaleeq -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
+  <!-- Nastaleeq Font for Urdu -->
+  <link href="https://fonts.googleapis.com/css2?family=Jameel+Noori+Nastaleeq&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
-      font-family: "Noto Nastaliq Urdu", serif;
+      font-family: "Jameel Noori Nastaleeq", serif;
       background-color: #f9f9f9;
       text-align: center;
       direction: rtl;
@@ -20,32 +20,34 @@
     header {
       background: linear-gradient(to right, #004d40, #00695c);
       color: white;
-      padding: 40px 10px;
+      padding: 50px 10px;
       border-bottom: 4px solid #00796b;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .urdu-name {
-      font-size: 42px;
+      font-size: 48px;
       font-weight: bold;
-      line-height: 1.5;
+      line-height: 1.4;
       margin-bottom: 10px;
+      text-shadow: 1px 1px 2px #00000050;
     }
 
     .english-name {
-      font-size: 20px;
+      font-size: 22px;
       color: #c8e6c9;
       font-family: "Poppins", sans-serif;
       letter-spacing: 1px;
+      margin-bottom: 15px;
+      text-shadow: 1px 1px 2px #00000050;
     }
 
     .description {
       font-size: 16px;
       color: #e0f2f1;
-      margin-top: 15px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 1.5;
+      max-width: 650px;
+      margin: 0 auto;
+      line-height: 1.6;
     }
   </style>
 </head>
