--- a/index.html
+++ b/index.html
@@ -5,49 +5,110 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tajush Sharia Library</title>
 
-  <!-- Nastaleeq Font for Urdu -->
-  <link href="https://fonts.googleapis.com/css2?family=Jameel+Noori+Nastaleeq&display=swap" rel="stylesheet">
+  <!-- Urdu Nastaleeq Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
-      font-family: "Jameel Noori Nastaleeq", serif;
+      font-family: "Noto Nastaliq Urdu", serif;
       background-color: #f9f9f9;
-      text-align: center;
       direction: rtl;
+      text-align: center;
     }
 
     header {
       background: linear-gradient(to right, #004d40, #00695c);
       color: white;
-      padding: 50px 10px;
+      padding: 40px 10px;
       border-bottom: 4px solid #00796b;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .urdu-name {
-      font-size: 48px;
+      font-size: 42px;
       font-weight: bold;
-      line-height: 1.4;
+      line-height: 1.5;
       margin-bottom: 10px;
-      text-shadow: 1px 1px 2px #00000050;
     }
 
     .english-name {
-      font-size: 22px;
+      font-size: 20px;
       color: #c8e6c9;
       font-family: "Poppins", sans-serif;
       letter-spacing: 1px;
-      margin-bottom: 15px;
-      text-shadow: 1px 1px 2px #00000050;
     }
 
     .description {
       font-size: 16px;
       color: #e0f2f1;
-      max-width: 650px;
-      margin: 0 auto;
-      line-height: 1.6;
+      margin-top: 15px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.5;
+    }
+
+    /* Search Section */
+    .search-container {
+      margin: 40px auto;
+      max-width: 500px;
+      text-align: center;
+    }
+
+    .search-input {
+      width: 80%;
+      padding: 12px;
+      font-size: 18px;
+      border: 2px solid #00796b;
+      border-radius: 8px;
+      outline: none;
+      font-family: "Noto Nastaliq Urdu", serif;
+      text-align: right;
+    }
+
+    .search-button {
+      padding: 12px 20px;
+      margin-top: 10px;
+      background-color: #00796b;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 18px;
+    }
+
+    .search-button:hover {
+      background-color: #004d40;
+    }
+
+    /* Books Section (for later steps) */
+    .books-section {
+      margin: 40px auto;
+      max-width: 800px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .book {
+      background-color: white;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      width: 180px;
+      padding: 10px;
+    }
+
+    .book img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .book-title {
+      margin-top: 10px;
+      font-size: 16px;
+      color: #333;
     }
   </style>
 </head>
@@ -61,6 +122,55 @@
       یہ مفت آن لائن لائبریری ہے جہاں دینی، اردو اور عربی کتابیں آسانی سے پڑھی اور ڈاؤنلوڈ کی جا سکتی ہیں۔
     </div>
   </header>
+
+  <!-- 🔍 Search Section -->
+  <div class="search-container">
+    <input type="text" class="search-input" id="searchInput" placeholder="کتاب تلاش کریں...">
+    <br>
+    <button class="search-button" onclick="searchBook()">تلاش کریں</button>
+  </div>
+
+  <!-- 📚 Books Section -->
+  <div class="books-section" id="booksSection">
+    <!-- Books will appear here -->
+  </div>
+
+  <script>
+    const books = [
+      { title: "نماز کے مسائل", image: "https://via.placeholder.com/150", keywords: ["نماز", "احکام", "نماز کے مسائل"] },
+      { title: "قرآن کی روشنی", image: "https://via.placeholder.com/150", keywords: ["قرآن", "تفسیر", "اسلام"] },
+      { title: "حیات صحابہ", image: "https://via.placeholder.com/150", keywords: ["صحابہ", "اسلامی تاریخ"] },
+      { title: "Arabic Grammar", image: "https://via.placeholder.com/150", keywords: ["Arabic", "Grammar", "نحو"] }
+    ];
+
+    function searchBook() {
+      const input = document.getElementById('searchInput').value.trim();
+      const section = document.getElementById('booksSection');
+      section.innerHTML = '';
+
+      if (input === '') {
+        section.innerHTML = '<p>براہ کرم تلاش کے لیے کوئی لفظ درج کریں۔</p>';
+        return;
+      }
+
+      const results = books.filter(book =>
+        book.keywords.some(keyword => keyword.includes(input))
+      );
+
+      if (results.length === 0) {
+        section.innerHTML = '<p>کوئی کتاب نہیں ملی۔</p>';
+        return;
+      }
+
+      results.forEach(book => {
+        section.innerHTML += `
+          <div class="book">
+            <img src="${book.image}" alt="${book.title}">
+            <div class="book-title">${book.title}</div>
+          </div>`;
+      });
+    }
+  </script>
 
 </body>
 </html>
