--- a/index.html
+++ b/index.html
@@ -46,9 +46,37 @@
       line-height: 1.5;
     }
 
+    /* Categories Section */
+    .categories {
+      margin: 40px auto;
+      max-width: 900px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .category-card {
+      background-color: #ffffff;
+      border: 2px solid #00796b;
+      color: #004d40;
+      border-radius: 12px;
+      padding: 15px 25px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .category-card:hover {
+      background-color: #00796b;
+      color: white;
+      transform: scale(1.05);
+    }
+
     /* Search Bar */
     .search-container {
-      margin: 30px auto;
+      margin: 20px auto;
       max-width: 500px;
     }
 
@@ -62,43 +90,18 @@
       text-align: right;
     }
 
-    /* Categories Section */
-    #categories {
-      max-width: 900px;
+    /* Featured Books */
+    h2 {
+      margin-top: 50px;
+      font-size: 26px;
+      color: #004d40;
+    }
+
+    .book-section {
+      max-width: 1000px;
       margin: 30px auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 20px;
-      padding: 0 20px;
-    }
-
-    .category-card, .subcategory-card {
-      background-color: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 15px;
-      cursor: pointer;
-      transition: transform 0.3s;
-    }
-
-    .category-card:hover, .subcategory-card:hover {
-      transform: scale(1.05);
-    }
-
-    .subcategory-container {
-      display: none;
-      margin-top: 10px;
-      gap: 10px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-    }
-
-    /* Featured Books Grid */
-    .book-section {
-      max-width: 900px;
-      margin: 40px auto;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 20px;
       padding: 0 20px;
     }
@@ -110,7 +113,6 @@
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       padding: 10px;
       transition: transform 0.3s;
-      cursor: pointer;
     }
 
     .book-card:hover {
@@ -126,56 +128,13 @@
       margin-top: 10px;
       font-size: 18px;
       font-weight: bold;
+      color: #004d40;
     }
 
-    /* Modal */
-    #bookModal {
-      display:none;
-      position:fixed;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      background: rgba(0,0,0,0.8);
-      justify-content:center;
-      align-items:center;
-      z-index:1000;
+    .book-author {
+      font-size: 15px;
+      color: #00796b;
     }
-
-    #bookModalContent {
-      background:white;
-      padding:20px;
-      border-radius:10px;
-      max-width:400px;
-      width:90%;
-      text-align:center;
-      position:relative;
-    }
-
-    #closeModal {
-      position:absolute;
-      top:10px;
-      right:15px;
-      cursor:pointer;
-      font-size:20px;
-    }
-
-    #readOnline, #downloadBook {
-      text-decoration:none;
-      color:white;
-      padding:10px 20px;
-      border-radius:5px;
-      margin:5px;
-    }
-
-    #readOnline {
-      background:#004d40;
-    }
-
-    #downloadBook {
-      background:#00796b;
-    }
-
   </style>
 </head>
 
@@ -189,61 +148,35 @@
     </div>
   </header>
 
+  <!-- Categories -->
+  <section id="categories" class="categories">
+    <div class="category-card" data-category="darsi">📘 درسی کتابیں (Darsi Books)</div>
+    <div class="category-card" data-category="ghair-darsi">📗 غیر درسی کتابیں (Ghair Darsi Books)</div>
+  </section>
+
   <!-- Search Bar -->
   <div class="search-container">
     <input type="text" id="searchInput" placeholder="کتاب تلاش کریں...">
   </div>
 
-  <!-- Categories Section -->
-  <h2>📂 کتابوں کی اقسام</h2>
-  <div id="categories">
-    <div class="category-card" data-category="Darsi">
-      درسی کتابیں<br>Darsi Kitaben
-      <div class="subcategory-container">
-        <div class="subcategory-card" data-subcategory="Kitaben">کتابیں<br>Kitaben</div>
-        <div class="subcategory-card" data-subcategory="Shuruhaat">شروحات<br>Shuruhaat</div>
-      </div>
-    </div>
-    <div class="category-card" data-category="GhairDarsi">
-      غیر درسی کتابیں<br>Ghair Darsi Kitaben
-    </div>
-  </div>
-
-  <!-- Featured Books Section -->
+  <!-- Featured Books -->
   <h2>📚 نمایاں کتابیں</h2>
   <div id="bookList" class="book-section"></div>
 
-  <!-- Book Modal -->
-  <div id="bookModal">
-    <div id="bookModalContent">
-      <span id="closeModal">&times;</span>
-      <img id="modalImage" src="" alt="" style="width:100%; border-radius:5px; margin-bottom:10px;">
-      <h3 id="modalTitle"></h3>
-      <div style="margin-top:15px;">
-        <a id="readOnline" href="#" target="_blank">Read Online</a>
-        <a id="downloadBook" href="#" target="_blank">Download</a>
-      </div>
-    </div>
-  </div>
-
   <script>
     const books = [
-      { title: "کتاب نور", image: "https://via.placeholder.com/150", readLink: "#", downloadLink: "#", category: "Darsi", subcategory: "Kitaben" },
-      { title: "شروح احادیث", image: "https://via.placeholder.com/150", readLink: "#", downloadLink: "#", category: "Darsi", subcategory: "Shuruhaat" },
-      { title: "غیر درسی کتاب 1", image: "https://via.placeholder.com/150", readLink: "#", downloadLink: "#", category: "GhairDarsi" },
-      { title: "غیر درسی کتاب 2", image: "https://via.placeholder.com/150", readLink: "#", downloadLink: "#", category: "GhairDarsi" }
+      { title: "صحیح البخاری (عربی)", author: "امام بخاریؒ", category: "darsi", image: "https://via.placeholder.com/150" },
+      { title: "صحیح مسلم (عربی)", author: "امام مسلمؒ", category: "darsi", image: "https://via.placeholder.com/150" },
+      { title: "کنزالایمان", author: "اعلیٰ حضرت احمد رضا خانؒ", category: "ghair-darsi", image: "https://via.placeholder.com/150" },
+      { title: "سنن الترمذی (عربی)", author: "امام ترمذیؒ", category: "darsi", image: "https://via.placeholder.com/150" },
+      { title: "فتاویٰ رضویہ", author: "اعلیٰ حضرت احمد رضا خانؒ", category: "ghair-darsi", image: "https://via.placeholder.com/150" },
+      { title: "بہار شریعت", author: "مولانا امجد علی اعظمیؒ", category: "ghair-darsi", image: "https://via.placeholder.com/150" }
     ];
 
     const bookList = document.getElementById("bookList");
     const searchInput = document.getElementById("searchInput");
-    const modal = document.getElementById("bookModal");
-    const modalImage = document.getElementById("modalImage");
-    const modalTitle = document.getElementById("modalTitle");
-    const readOnline = document.getElementById("readOnline");
-    const downloadBook = document.getElementById("downloadBook");
-    const closeModal = document.getElementById("closeModal");
+    const categories = document.querySelectorAll(".category-card");
 
-    // Display Books
     function displayBooks(filteredBooks) {
       bookList.innerHTML = "";
       filteredBooks.forEach(book => {
@@ -252,33 +185,29 @@
         div.innerHTML = `
           <img src="${book.image}" alt="${book.title}">
           <div class="book-title">${book.title}</div>
+          <div class="book-author">${book.author}</div>
         `;
-        div.addEventListener("click", function() {
-          modalImage.src = book.image;
-          modalTitle.innerText = book.title;
-          readOnline.href = book.readLink;
-          downloadBook.href = book.downloadLink;
-          modal.style.display = "flex";
-        });
         bookList.appendChild(div);
       });
     }
 
-    // Initial Display
-    displayBooks(books);
+    // Category Filter
+    categories.forEach(cat => {
+      cat.addEventListener("click", function() {
+        const selectedCategory = this.getAttribute("data-category");
+        const filtered = books.filter(book => book.category === selectedCategory);
+        displayBooks(filtered);
+      });
+    });
 
-    // Search functionality
-    searchInput.addEventListener("input", function() {
+    // Search Function
+    searchInput.addEventListener("input", function () {
       const query = this.value.trim();
       const filtered = books.filter(book => book.title.includes(query));
       displayBooks(filtered);
     });
 
-    // Close modal
-    closeModal.addEventListener("click", () => modal.style.display = "none");
-    window.addEventListener("click", e => {
-      if (e.target === modal) modal.style.display = "none";
-    });
+    displayBooks(books);
   </script>
 
 </body>
